--- a/network/build.gradle
+++ b/network/build.gradle
@@ -1,39 +1,34 @@
-apply plugin: 'com.android.application'
-
+apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
-
 apply plugin: 'kotlin-android-extensions'
-
 android {
     compileSdkVersion 28
+
+
     defaultConfig {
-        applicationId "com.my.gif"
         minSdkVersion 16
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
+
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
 }
+
 //开启kotlin插件扩展
 androidExtensions {
     experimental = true
 }
 dependencies {
-    //api相当于compile,待后期优化
     api fileTree(dir: 'libs', include: ['*.jar'])
-    api"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    api 'com.android.support:appcompat-v7:28.0.0'
-    api 'com.android.support.constraint:constraint-layout:1.1.3'
-    api 'org.greenrobot:eventbus:3.0.0'
-    testImplementation 'junit:junit:4.12'
-    implementation project(path: ':core')
-    api project(path: ':network')
-
+    api project(path: ':core')
 }
