--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,5 +35,5 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     implementation project(path: ':core')
     api project(path: ':network')
-
+    api 'com.android.support:design:28.0.0'
 }
