--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     implementation project(path: ':core')
     api project(path: ':network')
     api 'com.android.support:design:28.0.0'
+    api 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.1'
 }
