--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,24 +3,60 @@
           xmlns:tools="http://schemas.android.com/tools" package="com.my.gif">
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES"/>
+
     <application
+            android:networkSecurityConfig="@xml/network_security_config"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
-            tools:ignore="GoogleAppIndexingWarning"
-    >
+            android:name=".MyApplication"
+            tools:ignore="GoogleAppIndexingWarning">
+        <!--启动页-->
         <activity android:name=".ui.SplashActivity"
-
-                  android:screenOrientation="portrait">
+                  android:screenOrientation="portrait"
+                  android:theme="@style/AppTheme.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <!--登录页-->
+        <activity android:name=".ui.LoginActivity"
+                  android:screenOrientation="portrait"
+                  android:theme="@style/AppTheme.LoginActivity"
+                  android:windowSoftInputMode="adjustResize|stateHidden">
+            <intent-filter>
+                <action android:name="com.my.gif.ui.ACTION_LOGIN"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+            <intent-filter>
+                <action android:name="com.my.gif.ui.ACTION_LOGIN_WITH_TRANSITION"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+        </activity>
+        <!--注册页-->
+        <activity android:name=".ui.RegisterActivity"
+                  android:screenOrientation="portrait"
+                  android:theme="@style/AppTheme.RegisterActivity"/>
+
+        <provider
+                android:authorities="com.my.gif.util.fileprovider"
+                android:name=".util.GifFunFileProvider"
+                android:exported="false"
+                android:grantUriPermissions="true">
+            <meta-data android:name="android.support.FILE_PROVIDER_PATHS"
+                       android:resource="@xml/file_paths"/>
+        </provider>
+        <meta-data
+                android:name="APP_CHANNEL"
+                android:value="opensource"/>
     </application>
 
 </manifest>
