--- a/core/build.gradle
+++ b/core/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     api 'com.android.support:appcompat-v7:28.0.0'
     api 'com.google.code.gson:gson:2.8.5'
     api 'com.squareup.okhttp3:okhttp:3.10.0'
+    api 'org.litepal.android:kotlin:2.1.0'
 }
